--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CubeCrafter</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-slate-100 dark:bg-slate-900 flex flex-col items-center justify-start">
-    <h1 class="text-center text-4xl text-bold dark:text-white font-bold my-4">CubeCrafter</h1>
+{% extends "base.html" %}
+
+{% block content %}
 
     <form action="/" method="POST" class="flex flex-row gap-2">
-        <input type="text" name="size" value="{{ size if size else default_size }}" required class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
+        <input type="text" name="size" value="{{ size }}" required class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
         <button type="submit" class="bg-amber-400 dark:bg-amber-600 text-black dark:text-white px-4 py-2 rounded-full">
             Generate
         </button>
     </form>
 
-    {% if cube %}
-    <div class="flex flex-col items-center gap-4 mt-8">
-        <div class="flex justify-center gap-4">
-            <!-- UP, LEFT, FRONT, RIGHT, BACK, DOWN -->
-            {% for face in range(6) %}
-                <div class="grid gap-2" style="grid-template-columns: repeat({{ size }}, 4em);">
-                    {% for i in range(size) %}
-                        {% for j in range(size) %}
-                            <div class="w-16 h-16 bg-black dark:bg-white"></div>
-                        {% endfor %}
-                    {% endfor %}
-                </div>
-            {% endfor %}
+    {% if error %}
+        <div class="text-lg text-bold text-rose-500 dark:text-rose-400 mt-4">
+            {{ error }}
         </div>
-    </div>
     {% endif %}
-</body>
-</html>
+
+    {% if cube %}
+        {% import 'cube.html' as cube_template %}
+        {{ cube_template.render(cube, size) }}
+
+        <form action="/solve" method="POST" class="flex flex-col justify-center items-center gap-2 mt-16">
+            <div class="flex flex-row justify-center items-center gap-2">
+                <input type="text" required name="lower-limit" placeholder="Lower Shuffle Limit" class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
+                <input type="text" required name="upper-limit" placeholder="Upper Shuffle Limit" class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
+            </div>
+            <input type="hidden" name="cube" value="{{ cube.state }}">
+            <button type="submit" class="bg-purple-400 dark:bg-purple-600 text-black dark:text-white px-4 py-2 rounded-full max-w-fit">
+                Shuffle
+            </button>
+        </form>
+    {% endif %}
+
+{% endblock %}
