Implement Cube Solve

--- a/templates/solve.html
+++ b/templates/solve.html
@@ -8,6 +8,9 @@
         <div class="text-lime-700 dark:text-lime-300 text-lg text-bold mt-8">
             Shuffled in {{ shuffle_moves | length }} moves.
         </div>
+        <div class="text-fuchsia-700 dark:text-fuchsia-300 text-lg text-bold mt-8">
+            Solved in {{ solve_moves | length }} moves.
+        </div>
     {% endif %}
 
 {% endblock %}
