--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-    <form action="/" method="POST" class="flex flex-row gap-2">
-        <input type="text" name="size" value="{{ size }}" required class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
+    <form action="/" method="POST" class="flex flex-col md:flex-row gap-2">
+        <input type="text" name="size" value="{{ size }}" required class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full focus:outline-none">
         <button type="submit" class="bg-amber-400 dark:bg-amber-600 text-black dark:text-white px-4 py-2 rounded-full">
             Generate
         </button>
@@ -19,10 +19,10 @@
         {% import 'cube.html' as cube_template %}
         {{ cube_template.render(cube, size) }}
 
-        <form action="/solve" method="POST" class="flex flex-col justify-center items-center gap-2 mt-16">
-            <div class="flex flex-row justify-center items-center gap-2">
-                <input type="text" required name="lower-limit" placeholder="Lower Shuffle Limit" class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
-                <input type="text" required name="upper-limit" placeholder="Upper Shuffle Limit" class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full">
+        <form action="/solve" method="POST" class="flex flex-col justify-center items-center gap-2 my-16">
+            <div class="flex flex-col md:flex-row justify-center items-center gap-2">
+                <input type="text" required name="lower-limit" placeholder="Lower Shuffle Limit" class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full focus:outline-none">
+                <input type="text" required name="upper-limit" placeholder="Upper Shuffle Limit" class="bg-slate-50 dark:bg-slate-950 text-black dark:text-white px-4 py-2 rounded-full focus:outline-none">
             </div>
             <input type="hidden" name="cube" value="{{ cube.state }}">
             <button type="submit" class="bg-purple-400 dark:bg-purple-600 text-black dark:text-white px-4 py-2 rounded-full max-w-fit">
