--- a/templates/solve.html
+++ b/templates/solve.html
@@ -6,7 +6,7 @@
         {% import 'cube.html' as cube_template %}
         {{ cube_template.render(cube, size) }}
 
-        <div class="flex flex-row items-start gap-8 mt-8">
+        <div class="flex flex-col md:flex-row items-start gap-8 mt-8">
             <div class="flex flex-col items-center">
                 <div class="text-lime-700 dark:text-lime-300 text-lg text-bold mb-4">
                     Shuffled in {{ shuffle_moves | length }} moves.
